<resources>
    <string name="app_name">OrbiGo</string>
    <string name="emailInput">Email Address</string>
    <string name="passwordInput">Password</string>
    <string name="phoneInput">Phone number</string>
    <string name="createAccount">Create account</string>
    <string name="login">Login</string>
    <string name="loginFB">Log In with facebook</string>
    <string name="signupFB">Sign up with facebook</string>
    <string name="title_activity_maps">Map</string>
    <string name="explore">Explore</string>
    <string name="remove">Remove</string>
    <string name="tvt_prompt">Enable tourist mode</string>
    <string name="bto_prompt">Enable business mode</string>
    <string name="facebook_app_id">1638720049514345</string>
    <string name="fb_login_protocol_scheme">fb1638720049514345</string>
    <string name="find_a_place">Find a place</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="start_new_journey">Start New Journey</string>
    <string name="where_will_your_next_adventure_be">Where will your next adventure be?</string>
    <string name="looking_for_an_attraction">Looking for an attraction?</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="continue_with_facebook1">Log in with facebook </string>
    <string name="continue_with_facebook">Sign up with facebook </string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="title_activity_btobottom_nav">BTOBottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nearby_poi">NearbyPoiActivity</string>
    <string name="title_activity_route_map">Trip Route</string>
    <string name="geofence_transition_invalid_type">invalid geo trans</string>


    <string name="business_cvv_business_field">Business field</string>
    <string name="business_cvv_description">Description</string>
    <string name="business_cvv_enter_a_desc">Enter a description for your business</string>
    <string name="business_cvv_price">Price</string>
    <string name="business_cvv_from">FROM</string>
    <string name="business_cvv_to">TO</string>
    <string name="business_cvv_capacity">Capacity</string>
    <string name="business_cvv_number_of_people">Number of people</string>
    <string name="business_cvv_update">Update</string>
    <string name="busines_edit">Edit</string>
    <string name="business">Business</string>
    <string name="business_list_new_business">List New Business</string>
    <string name="change_photo_menu_title">Profile Photo</string>
    <string name="business_profile_accounts">Accounts</string>
    <string name="busine_profile_logout">Logout</string>
    <string name="busine_profile_switch_to_tourist">Switch to tourist</string>
    <string name="busine_profile_settings">Settings</string>
    <string name="busine_profile_profile">Profile</string>
    <string name="busine_profile_edit_profile">Edit profile</string>

    <string name="businessplus_free">Free</string>
    <string name="businessplus_current_subscription">Current Subscription</string>
    <string name="businessplus_display_business_information_dashboard">Display business information Dashboard</string>
    <string name="businessplus_booking_notifications">Booking notifications</string>
    <string name="businessplus_5_photos_n1_current_event">5 photos  1 current event</string>
    <string name="businessplus_premium">Premium</string>
    <string name="businessplus_24_mo">$24/mo</string>
    <string name="businessplus_tourism_relationship">Tourism relationship Managment System Dashboard</string>
    <string name="businessplus_micro_event_creation">Micro event creation and management(notification only)</string>
    <string name="businessplus_booking_with_communication_integration_with_social_media">Booking with communication integration with social media</string>
    <string name="businessplus_1_gb_of_storage">1 GB of storage for photos and videos</string>
    <string name="businessplus_subscribe">Subscribe</string>
    <string name="map_settings_sublocality">SubLocality</string>
    <string name="map_settings_locality">Locality</string>
    <string name="map_settings_explore">Explore</string>
    <string name="nlp_nearby_places_to_visit">Nearby places to visit</string>
    <string name="nlp_find_a_place">Find a place</string>
    <string name="nlp_plan_trip">Plan trip</string>
    <string name="nearbypoi_saved_places">Saved places</string>
    <string name="addtrip_continue">Continue</string>
    <string name="addtrip_note">Note</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="addpoitrip_readmore"><![CDATA[Read More >]]></string>
    <string name="addpoitrip_less"><![CDATA[Read less <]]></string>
    <string name="addpoitrip_reserve">RESERVE</string>
    <string name="addpoitrip_per_person">Per person</string>
    <string name="timline_from_your_location">from start location</string><!--TODO change to your location -->
    <string name="timeline_min">min</string>
    <string name="timline_miles">miles /</string>
    <string name="timline_per_person">per person</string>
    <string name="timline_hours_total">hours total</string>
    <string name="timline_miles2">miles</string>
    <string name="timeline_change">Change</string>
    <string name="details_explore">Explore</string>

    <string-array name="photo_menu">
        <item>Take photo</item>
        <item>Upload photo</item>
        <item>Remove photo</item>
    </string-array>

</resources>
