<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="horizontal"
        tools:context="com.orbigo.activities.BusinessPlusActivity">


        <!-- ********   Free *************-->
        <LinearLayout
            android:id="@+id/ll_free"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="-7.5sp"
                android:text="@string/businessplus_free"
                android:textColor="#000000"
                android:textSize="22sp"

                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="-7.5sp"
                android:text="@string/businessplus_current_subscription"
                android:textColor="@color/warm_grey"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/businessplus_display_business_information_dashboard"
                    android:textColor="@color/warm_grey"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/businessplus_booking_notifications"
                    android:textColor="@color/warm_grey"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/businessplus_5_photos_n1_current_event"
                    android:textColor="@color/warm_grey"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>
        <!-- ********   Premium *************-->
        <LinearLayout
            android:id="@+id/ll_premium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/aqua_blue"
            android:orientation="vertical"

            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/galano_grotesque"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="-7.5sp"
                android:text="@string/businessplus_premium"
                android:textColor="@color/white"
                android:textSize="22sp"

                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/galano_grotesque"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="-7.5sp"
                android:text="@string/businessplus_24_mo"
                android:textColor="@color/white"
                android:textSize="18sp"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/businessplus_tourism_relationship"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/businessplus_micro_event_creation"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/businessplus_booking_with_communication_integration_with_social_media"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/businessplus_1_gb_of_storage"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_button_primary"
                android:text="@string/businessplus_subscribe"
                android:textColor="@color/white" />


        </LinearLayout>


    </LinearLayout>
    <ImageView
        android:id="@+id/close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:onClick="onBackPress"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_close" />
</RelativeLayout>