<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/login_emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailInput"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="textEmailAddress" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:weightSum="10">
            <EditText
                android:id="@+id/login_passwordET"
                android:layout_weight="9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/passwordInput"
                android:inputType="textPassword"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:tooltipText="showMyPassword"
                android:clickable="true"
                android:id="@+id/eyeBtn"
                android:src="@drawable/ic_closedeye"
                android:focusable="true" />
        </LinearLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_radio_group">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:id="@+id/login_tvt_radio"
                android:text="Proceed as tourist"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:id="@+id/login_bto_radio"
                android:layout_marginEnd="50dp"
                android:text="Proceed as business"/>
        </RadioGroup>
        <Button
            android:id="@+id/login_login_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_border"
            android:textColor="#ffffff"/>
        <Button
            android:id="@+id/forgotpwdBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#071f5f"
            android:textSize="12sp" />
        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/com_facebook_button_background"
            android:drawableStart="@drawable/com_facebook_button_icon_white"
            android:paddingStart="10dp"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            android:id="@+id/login_fb_button"
            android:textColor="#fff"/>

    </LinearLayout>
</FrameLayout>