<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context="com.orbigo.fragments.SignUpFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/signup_emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:ems="10"
            android:fontFamily="@font/galano_grotesque"
            android:hint="@string/emailInput"
            android:inputType="textEmailAddress" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:weightSum="10">

            <EditText
                android:id="@+id/signup_passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="9"
                android:ems="10"
                android:fontFamily="@font/galano_grotesque"
                android:hint="@string/passwordInput"
                android:inputType="textPassword" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:tooltipText="showMyPassword"
                android:clickable="true"
                android:id="@+id/eyeBtn"
                android:src="@drawable/ic_closedeye"
                android:focusable="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/phone_codes_spinner"/>

            <EditText
                android:id="@+id/signup_phoneET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:fontFamily="@font/galano_grotesque"
                android:hint="@string/phoneInput"
                android:inputType="phone" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/enable_tvt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/galano_grotesque"
            android:text="@string/tvt_prompt" />

        <CheckBox
            android:id="@+id/enable_bto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/galano_grotesque"
            android:text="@string/bto_prompt" />

        <Button
            android:id="@+id/signup_createAccountBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/galano_grotesque"
            android:text="@string/createAccount"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

        <FrameLayout
            android:layout_marginTop="10dp"
            android:id="@+id/FrameLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/view4"
            android:layout_toStartOf="@+id/view4">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/com_facebook_button_background"
            android:paddingStart="10dp"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            android:id="@+id/signup_fb_button"
            android:textColor="@color/grey"
            android:visibility="gone"/>

            <Button
                android:id="@+id/signup_fb_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:background="@drawable/border_grey"
                android:fontFamily="@font/galano_grotesque"
                android:paddingStart="10dp"
                android:text="@string/continue_with_facebook"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:visibility="visible" />

        </FrameLayout>


    </LinearLayout>


    <!--<FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/view4"
        android:layout_marginEnd="36dp"
        android:layout_toStartOf="@+id/view4">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fblogin_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/fblogin_button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/view4"
            android:layout_marginEnd="27dp"
            android:layout_toStartOf="@+id/view4"
            android:contentDescription="TODO"
            android:padding="25dp"
            app:srcCompat="@drawable/newfb" />
    </FrameLayout>-->
</FrameLayout>