<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"

    tools:context="com.orbigo.activities.AddTripPoiActivity">

    <FrameLayout
        android:id="@+id/toolbar_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            app:navigationIcon="@drawable/ic_back"
            app:theme="@style/ToolbarStyle"
            app:title=" "
            app:titleTextColor="@color/white" />
    </FrameLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/toolbar_frame"
    android:layout_above="@id/rl_select_time"
    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"

        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"

            android:background="@color/grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/addtrip_note"
            android:textColor="@color/black"
            android:textSize="20dp" />


        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lorem_ipsum"
            app:colorClickableText="@color/aqua_blue"
            app:trimCollapsedText="@string/addpoitrip_readmore"
            app:trimExpandedText="@string/addpoitrip_less"
            app:trimLines="3"
            app:trimMode="trimModeLine" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">
            <TextView
                android:id="@+id/tv_cost"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/black"
                tools:text="$25"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:text="@string/addpoitrip_per_person"
                />
            </LinearLayout>
            <Button
                android:id="@+id/button_reserve"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_background_white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/addpoitrip_reserve"
                android:textAllCaps="false"
                android:textColor="@color/aqua"
                android:textSize="18sp" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:layout_above="@+id/rl_bottom" />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        >

        <TextView
            android:id="@+id/tv_bootom_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="17 Jan 2018"
            android:textColor="@color/black"
            android:textSize="20sp"

            />
        <TextView
            android:id="@+id/tv_bootom_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_bootom_calendar"
            tools:text="10 pm"
            android:textSize="18sp"

            />

        <Button
            android:id="@+id/button_continue"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_background_blue"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/addtrip_continue"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:textSize="18sp" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/rl_select_time"
        android:layout_above="@+id/map"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:clickable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Date"
            android:textSize="22dp"
            android:layout_centerVertical="true"
            />

        <ImageView
            android:id="@+id/iv_calendar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_booking"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/tv_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="17 Jan 2018"
            android:textSize="20dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/iv_calendar"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>




</RelativeLayout>

